[gd_scene load_steps=23 format=2]

[ext_resource path="res://Player/PlayerAnimation.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://GFX/Players/player_climb1.png" type="Texture" id=3]
[ext_resource path="res://GFX/Players/player_climb2.png" type="Texture" id=4]
[ext_resource path="res://GFX/Players/player_climb3.png" type="Texture" id=5]
[ext_resource path="res://GFX/Players/player_attack.png" type="Texture" id=6]
[ext_resource path="res://Player/SFXHandler.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/Camera2D.gd" type="Script" id=12]
[ext_resource path="res://Shaders/JitterFreePixelArt.tres" type="Material" id=13]
[ext_resource path="res://GFX/Players/player_stand-smol.png" type="Texture" id=14]
[ext_resource path="res://GFX/Players/player_walk1.png" type="Texture" id=15]
[ext_resource path="res://GFX/Players/player_walk2.png" type="Texture" id=16]
[ext_resource path="res://GFX/Players/player_jump.png" type="Texture" id=17]
[ext_resource path="res://ParticleEffects/RunSmoke.tscn" type="PackedScene" id=18]
[ext_resource path="res://Player/particleHandler.gd" type="Script" id=19]
[ext_resource path="res://ParticleEffects/FootDust.tscn" type="PackedScene" id=20]
[ext_resource path="res://GFX/Players/player_fall.png" type="Texture" id=23]
[ext_resource path="res://GFX/Players/player_hurt.png" type="Texture" id=24]
[ext_resource path="res://GFX/Players/player_run1.png" type="Texture" id=25]
[ext_resource path="res://GFX/Players/player_run2.png" type="Texture" id=26]

[sub_resource type="CircleShape2D" id=1]
radius = 73.4417

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "climbing",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 475.459, 323.543 )
collision_mask = 14
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.78412, 16.7059 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 13 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "walk"
frame = 1
playing = true
script = ExtResource( 1 )

[node name="hurtTimer" type="Timer" parent="AnimatedSprite"]
one_shot = true

[node name="jumpTimer" type="Timer" parent="AnimatedSprite"]

[node name="punchTimer" type="Timer" parent="AnimatedSprite"]

[node name="particleHandler" type="Node2D" parent="."]
script = ExtResource( 19 )

[node name="DustTimer" type="Timer" parent="particleHandler"]
one_shot = true

[node name="FootDust" parent="particleHandler" instance=ExtResource( 20 )]
position = Vector2( 7.85724, 85.6136 )
emitting = false
one_shot = true

[node name="RunSmokeRight" parent="particleHandler" instance=ExtResource( 18 )]
position = Vector2( 31.4723, 74.5608 )
rotation = 1.42419
emitting = false

[node name="RunSmokeLeft" parent="particleHandler" instance=ExtResource( 18 )]
position = Vector2( -22.9383, 78.0216 )
emitting = false

[node name="SFXHandler" parent="." instance=ExtResource( 8 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
limit_left = 0
script = ExtResource( 12 )
[connection signal="animate" from="." to="AnimatedSprite" method="_on_Player_animate"]
