[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/Players/player_stand1.png" type="Texture" id=1]
[ext_resource path="res://GFX/Players/player_stand1-orig.png" type="Texture" id=2]
[ext_resource path="res://GFX/Players/player_walk2.png" type="Texture" id=3]
[ext_resource path="res://GFX/Players/player_walk1.png" type="Texture" id=4]
[ext_resource path="res://Player/PlayerAnimation.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="PlayerAnimation" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "idle"
script = ExtResource( 6 )
